# cctools

./: .gitignore
.claude/: settings.local.json
.claude/skills/: README.md
.claude/skills/airss/: SKILL.md  config.yaml  feed_cache.json  main.py  pyproject.toml
.claude/skills/airss/src/: __init__.py
.claude/skills/airss/src/ai/: __init__.py
.claude/skills/airss/src/core/: models.py
.claude/skills/airss/src/managers/: cache_manager.py  config_manager.py
.claude/skills/airss/src/notion/: __init__.py  image_uploader.py  notion_manager.py
.claude/skills/airss/src/parsers/: content_parser.py
.claude/skills/airss/src/utils/: __init__.py
.claude/skills/daily-article-summarizer/: .env.example  SKILL.md  config.yaml  main.py  pyproject.toml
.claude/skills/daily-article-summarizer/src/: __init__.py
.claude/skills/daily-article-summarizer/src/ai/: google_client.py  nvidia_client.py
.claude/skills/daily-article-summarizer/src/core/: __init__.py  models.py
.claude/skills/daily-article-summarizer/src/managers/: __init__.py  article_scanner.py  cache_manager.py  notion_manager.py  summarizer.py
.claude/skills/rss-article-saver/: .env.example  SKILL.md  config.yaml  main.py  pyproject.toml  subscriptions.opml
.claude/skills/rss-article-saver/src/: __init__.py
.claude/skills/rss-article-saver/src/ai/: __init__.py  deepseek_client.py  google_client.py  nvidia_client.py  translation_client.py  zhipu_client.py
.claude/skills/rss-article-saver/src/core/: __init__.py  models.py  monitor.py
.claude/skills/rss-article-saver/src/managers/: __init__.py  cache_manager.py  config_manager.py  content_manager.py  opml_parser.py  rss_manager.py
.claude/skills/rss-article-saver/src/notion/: __init__.py  notion_manager.py
.claude/skills/rss-article-saver/src/utils/: __init__.py  text_utils.py
.claude/skills/x-following-fetcher/: SKILL.md  config.yaml  main.py  pyproject.toml  test_parse.py  x_curl.txt
.claude/workflows/: .env.example  README.md  notion_manager.py  quick_test.py  requirements.txt  run.py  run_nvidia.py  run_standalone.py  tech-article-collector.py  tech-article-collector.yaml  test.py
.sisyphus/notepads/: learnings.md
chrome-page-saver/: README.md  background.js  content.js  main.py  options.html  options.js  popup.html  popup.js  pyproject.toml
chrome-page-saver/icons/: generate_icons.py
mymind/daily-summary/: 20260130_daily_summary.md  20260202_daily_summary.md
novel/雪夜密室/: 第01章-雪夜疗养馆.md  第02章-密室之死.md  第03章.md  第04章.md  第05章-流程的压迫.md  第06章.md  第07章.md  第08章-天花板后的秘密.md  第09章-墙壁里的信.md  第10章.md  第11章-迟来的警笛.md  (+7 more)
(+38 files in other folders)
