[project]
name = "airss"
version = "1.0.0"
description = "RSS 监控 + DeepSeek AI 总结 + Notion 推送"
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.0",
    "PyYAML>=6.0",
    "notion-client>=2.2.1",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

