[project]
name = "x-following-fetcher"
version = "0.1.0"
description = "Fetches latest posts from X (Twitter) users you follow and saves them to Markdown"
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
